[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/style/default_font_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/style/default.theme" type="Theme" id=2]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -239.0
margin_right = 187.0
margin_bottom = 239.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 354.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 1 )
text = "Main Menu"
align = 1
valign = 1

[node name="ProceedButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 59.0
margin_right = 354.0
margin_bottom = 90.0
size_flags_horizontal = 5
text = "Proceed"

[node name="NewGameButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 100.0
margin_right = 354.0
margin_bottom = 131.0
size_flags_horizontal = 5
text = "New Game"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 141.0
margin_right = 354.0
margin_bottom = 172.0
size_flags_horizontal = 5
text = "Save"

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 182.0
margin_right = 354.0
margin_bottom = 213.0
size_flags_horizontal = 5
text = "Load"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 223.0
margin_right = 354.0
margin_bottom = 254.0
size_flags_horizontal = 5
text = "Exit"
[connection signal="pressed" from="Panel/VBoxContainer/ProceedButton" to="." method="_on_ProceedButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
