extends Control


func _on_ProceedButton_pressed():
    pass # Replace with function body.


func _on_NewGameButton_pressed():
    pass # Replace with function body.


func _on_SaveButton_pressed():
    pass # Replace with function body.


func _on_LoadButton_pressed():
    pass # Replace with function body.


func _on_ExitButton_pressed():
    pass # Replace with function body.
